src/test/ui/or-patterns/feature-gate-or_patterns.stderr
error: top-level or-patterns are not allowed in `let` bindings
  --> $DIR/feature-gate-or_patterns.rs:28:9
   |
LL |     let | A | B;
   |         ^^^^^^^ help: wrap the pattern in parentheses: `(A | B)`

error: top-level or-patterns are not allowed in `let` bindings
  --> $DIR/feature-gate-or_patterns.rs:30:9
   |
LL |     let A | B;
   |         ^^^^^ help: wrap the pattern in parentheses: `(A | B)`

error[E0658]: or-patterns syntax is experimental
  --> $DIR/feature-gate-or_patterns.rs:5:14
   |
LL |         Some(0 | 1 | 2) => {}
   |              ^^^^^^^^^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(or_patterns)]` to the crate attributes to enable

error[E0658]: or-patterns syntax is experimental
  --> $DIR/feature-gate-or_patterns.rs:28:9
   |
LL |     let | A | B;
   |         ^^^^^^^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(or_patterns)]` to the crate attributes to enable

error[E0658]: or-patterns syntax is experimental
  --> $DIR/feature-gate-or_patterns.rs:30:9
   |
LL |     let A | B;
   |         ^^^^^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(or_patterns)]` to the crate attributes to enable

error[E0658]: or-patterns syntax is experimental
  --> $DIR/feature-gate-or_patterns.rs:32:9
   |
LL |     for | A | B in 0 {}
   |         ^^^^^^^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(or_patterns)]` to the crate attributes to enable

error[E0658]: or-patterns syntax is experimental
  --> $DIR/feature-gate-or_patterns.rs:33:9
   |
LL |     for A | B in 0 {}
   |         ^^^^^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(or_patterns)]` to the crate attributes to enable

error[E0658]: or-patterns syntax is experimental
  --> $DIR/feature-gate-or_patterns.rs:34:13
   |
LL |     fn fun((A | B): _) {}
   |             ^^^^^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(or_patterns)]` to the crate attributes to enable

error[E0658]: or-patterns syntax is experimental
  --> $DIR/feature-gate-or_patterns.rs:35:15
   |
LL |     let _ = |(A | B): u8| ();
   |               ^^^^^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(or_patterns)]` to the crate attributes to enable

error[E0658]: or-patterns syntax is experimental
  --> $DIR/feature-gate-or_patterns.rs:36:10
   |
LL |     let (A | B);
   |          ^^^^^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(or_patterns)]` to the crate attributes to enable

error[E0658]: or-patterns syntax is experimental
  --> $DIR/feature-gate-or_patterns.rs:37:10
   |
LL |     let (A | B,);
   |          ^^^^^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(or_patterns)]` to the crate attributes to enable

error[E0658]: or-patterns syntax is experimental
  --> $DIR/feature-gate-or_patterns.rs:38:11
   |
LL |     let A(B | C);
   |           ^^^^^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(or_patterns)]` to the crate attributes to enable

error[E0658]: or-patterns syntax is experimental
  --> $DIR/feature-gate-or_patterns.rs:39:14
   |
LL |     let E::V(B | C);
   |              ^^^^^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(or_patterns)]` to the crate attributes to enable

error[E0658]: or-patterns syntax is experimental
  --> $DIR/feature-gate-or_patterns.rs:40:17
   |
LL |     let S { f1: B | C, f2 };
   |                 ^^^^^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(or_patterns)]` to the crate attributes to enable

error[E0658]: or-patterns syntax is experimental
  --> $DIR/feature-gate-or_patterns.rs:41:20
   |
LL |     let E::V { f1: B | C, f2 };
   |                    ^^^^^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(or_patterns)]` to the crate attributes to enable

error[E0658]: or-patterns syntax is experimental
  --> $DIR/feature-gate-or_patterns.rs:42:10
   |
LL |     let [A | B];
   |          ^^^^^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(or_patterns)]` to the crate attributes to enable

error[E0658]: or-patterns syntax is experimental
  --> $DIR/feature-gate-or_patterns.rs:16:14
   |
LL | accept_pat!((p | q));
   |              ^^^^^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(or_patterns)]` to the crate attributes to enable

error[E0658]: or-patterns syntax is experimental
  --> $DIR/feature-gate-or_patterns.rs:17:14
   |
LL | accept_pat!((p | q,));
   |              ^^^^^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(or_patterns)]` to the crate attributes to enable

error[E0658]: or-patterns syntax is experimental
  --> $DIR/feature-gate-or_patterns.rs:18:16
   |
LL | accept_pat!(TS(p | q));
   |                ^^^^^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(or_patterns)]` to the crate attributes to enable

error[E0658]: or-patterns syntax is experimental
  --> $DIR/feature-gate-or_patterns.rs:19:21
   |
LL | accept_pat!(NS { f: p | q });
   |                     ^^^^^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(or_patterns)]` to the crate attributes to enable

error[E0658]: or-patterns syntax is experimental
  --> $DIR/feature-gate-or_patterns.rs:20:14
   |
LL | accept_pat!([p | q]);
   |              ^^^^^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(or_patterns)]` to the crate attributes to enable

error: aborting due to 21 previous errors

For more information about this error, try `rustc --explain E0658`.
